fix(WeChatLogin): spin element covered English text of WeChat login. (#794)

--- a/web/flat-web/src/pages/LoginPage/WeChatLogin.less
+++ b/web/flat-web/src/pages/LoginPage/WeChatLogin.less
@@ -23,7 +23,7 @@
     z-index: 0;
     left: 0;
     right: 0;
-    bottom: 30px;
+    bottom: 55px;
     margin: auto;
     background: #f3f6f9;
 }
@@ -32,5 +32,5 @@
     font-size: 16px;
     font-weight: 400;
     color: #7a7b7c;
-    margin-top: 12px;
+    padding-top: 12px;
 }
